--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Ajay HS's Simple Web Portfolio</title>
 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
-<link rel="stylesheet" 	href="css/index.css">
+<link rel="stylesheet" 	href="index.css">
 </head>
 <body>
 <header>
@@ -26,15 +26,15 @@
 <h3 span style="color:#e8491d"> Intermediate Level Skills in </h3>
       <div class="intermediate_Container">
         <div class="Language">
-          <img src="img\logo_html.png">
+          <img src="logo_html.png">
           <h3>HTML 5</h3>
           </div>
         <div class="language">
-          <img src="img\logo_css.png">
+          <img src="logo_css.png">
           <h3>CSS 3</h3>
           </div>
         <div class="Language">
-          <img src="img\logo_javascript.png">
+          <img src="logo_javascript.png">
           <h3>JavaScript  5</h3>
           </div>
 	</div>
@@ -42,19 +42,19 @@
 <div class ="intermediate_Container">
 <div class="Language">
 
-          <img src="img\logo_mongodb.png">
+          <img src="logo_mongodb.png">
           <h3>Mongo DB</h3>
           </div>
 
 <div class="Language">
 
-          <img src="img\logo_Angular.png">
+          <img src="logo_Angular.png">
           <h3>AngularJS 4</h3>
           </div>
 
 <div class="Language">
 
-          <img src="img\logo_Nodejs.png">
+          <img src="logo_Nodejs.png">
           <h3>Node Js</h3>
           </div>
       </div>
