--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Ajay HS's Simple Web Portfolio</title>
 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
-<link rel="stylesheet" 	href="index.css">
+<link rel="stylesheet" 	href="style.css">
 </head>
 <body>
 <header>
